# myco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PR-REVIEW.md  README.md  RELEASE-NOTES.md  justfile  zapstore.yaml
.github/workflows/: ci.yml  release.yml
android/: keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/myco/: MainActivity.kt  NsiteActivity.kt  NsiteIcons.kt  PortraitCaptureActivity.kt
android/app/src/main/java/app/myco/ap/: ApRadio.kt
android/app/src/main/java/app/myco/aware/: AwareRadio.kt  AwareService.kt
android/app/src/main/java/app/myco/ble/: BleRadio.kt  BleService.kt
android/app/src/main/java/app/myco/core/: AppCoreClient.kt  MycoCore.kt  NativeCore.kt
android/app/src/main/java/app/myco/nfc/: NfcReader.kt  NfcStatus.kt  PairHostApduService.kt  PairPresent.kt
android/app/src/main/java/app/myco/share/: DeviceName.kt  NsiteShare.kt  PairSecrets.kt
android/app/src/main/java/app/myco/ui/: DeveloperScreen.kt  IdentityScreen.kt  MycoApp.kt  RadioWarnings.kt
android/app/src/main/java/app/myco/ui/screens/: AppsScreen.kt  CircleScreen.kt  DevScreen.kt  DiscoverScreen.kt  NfcVisuals.kt  PairScreen.kt  RequestsScreen.kt  SettingsScreen.kt  SheetComponents.kt
android/app/src/main/java/app/myco/ui/theme/: Theme.kt
android/app/src/main/java/app/myco/vpn/: MycoVpnService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: apduservice.xml  network_security_config.xml
docs/: README.md  getting-started.md  roadmap.md
docs/design/: ap-lane.md  app-shell.md  architecture.md  ble-interop.md  concepts.md  event-gossip.md  identity-pairing.md  nsite-layer.md  nsite-permissions.md  nsite-updates.md  propagation.md  security.md  usb-transport.md  wifi-aware-interop.md
docs/design/diagrams/: README.md
docs/how-to/: build.md  publish.md  run-two-device-demo.md
docs/reference/: ble-wire.md  config.md  ffi-surface.md  nostr-kinds.md  ports.md
myco-blossom/: Cargo.toml
myco-blossom/src/: lib.rs  server.rs
myco-core/: Cargo.toml
myco-core/examples/: identity.rs
myco-core/src/: action.rs  aware_bridge_jni.rs  ble_bridge_jni.rs  content.rs  gossip.rs  identity_store.rs  ip_source.rs  jni_abi.rs  lib.rs  peer_relay.rs  runtime.rs  state.rs  tun_bridge.rs  tun_bridge_jni.rs
myco-relay/: Cargo.toml
myco-relay/src/: lib.rs  server.rs
nsite-deck/: Cargo.toml
nsite-deck/examples/: gen_demo_nsite.rs
nsite-deck/src/: base36.rs  content_type.rs  gateway.rs  host.rs  lib.rs  model.rs  seams.rs  sync.rs  testing.rs
patches/: README.md  fips-mobile-features.patch
