[package]
name = "myco-blossom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nsite-deck = { path = "../nsite-deck" }
async-trait = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
