[package]
name = "myco-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "myco_core"
# `lib` (rlib) for host unit tests; `cdylib` for the Android `libmyco_core.so`.
crate-type = ["lib", "cdylib"]

[dependencies]
fips = { workspace = true }
nsite-deck = { path = "../nsite-deck" }
myco-relay = { path = "../myco-relay" }
myco-blossom = { path = "../myco-blossom" }
nostr = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
nsite-deck = { path = "../nsite-deck", features = ["testing"] }
tokio-tungstenite = { workspace = true }

# The JNI surface only exists on Android. Host (macOS/Linux) builds skip it and
# drive `AppRuntime` directly (see tests).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
# Bridge `tracing` (ours + fips) to Android logcat so the sync/FSP/BLE internals
# are visible with `adb logcat -s myco`.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
paranoid-android = "0.2"
