[package]
name = "myco-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nsite-deck = { path = "../nsite-deck" }
nostr = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nsite-deck = { path = "../nsite-deck", features = ["testing"] }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
