[package]
name = "nsite-deck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nostr = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[features]
# A throwaway-key signed-manifest generator for host tests / dev side-load.
# Off by default so the generator never ships in a release build.
testing = []

# The demo-nsite bundle generator only builds with the fixture feature.
[[example]]
name = "gen_demo_nsite"
required-features = ["testing"]

[dev-dependencies]
nsite-deck = { path = ".", features = ["testing"] }
tokio = { workspace = true, features = ["rt", "macros"] }
